# openliquid

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  PHASE_1.4_COMPLETE.md  PHASE_1.4_HANDOFF.md  PHASE_1.5_SUMMARY.md  PHASE_2.1_COMPLETE.md  PHASE_2.3_COMPLETE.md  PHASE_2.5_HANDOFF.md  PHASE_2_HANDOFF.md  PHASE_3.1_HANDOFF.md  PHASE_3.1_SUMMARY.md  PHASE_3.2_COMPLETE.md  PHASE_3.4_HANDOFF.md  PHASE_3.5_HANDOFF.md  PHASE_3.6_COMPLETE.md  PHASE_3.6_HANDOFF.md  PHASE_3.6_SUMMARY.md  PHASE_3.7_COMPLETE.md  README.md
claude/: PHASE_1.5_COMPLETE.md  PHASE_2.1_HANDOFF.md  PHASE_2.2_SUMMARY.md  PHASE_2.4_FINAL.md  PHASE_2.4_SUMMARY.md  PHASE_2.5_COMPLETE.md  PHASE_3.2_HANDOFF.md  PHASE_3.2_SUMMARY.md  PHASE_3.3_HANDOFF.md  PHASE_3.5_COMPLETE.md
consensus/: Cargo.toml
consensus/src/: lib.rs
consensus/src/checkpoint/: mod.rs  types.rs
consensus/src/crypto/: bls.rs  ecdsa.rs  hash.rs  mod.rs
consensus/src/hotstuff/: engine.rs  integration_tests.rs  mod.rs  types.rs
consensus/src/network/: gossip.rs  integration_tests.rs  mod.rs  performance_tests.rs  types.rs  validator.rs
consensus/src/pacemaker/: mod.rs
consensus/src/storage/: mod.rs  pruning.rs  state_machine.rs
consensus/src/sync/: mod.rs  types.rs
core/: Cargo.toml
core/src/: adl.rs  analytics.rs  batch.rs  checkpoint.rs  fees.rs  funding.rs  grid_strategy.rs  history.rs  insurance.rs  lib.rs  liquidation.rs  liquidity_pool.rs  margin.rs  matching.rs  mm_analytics.rs  oracle.rs  orderbook.rs  orders.rs  position_manager.rs  price_protection.rs  quote_manager.rs  rebate.rs  risk.rs  state_machine.rs  storage.rs  types.rs  vault.rs
core/tests/: perpetuals_integration.rs  persistence_integration.rs
docs/: CHANGELOG.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  README.md  README_IMPLEMENTATION.md  RISKS.md  TEST_SPECIFICATION.md  evm_core_interaction.md  hyperbft_implementation_plan.md  implementation_spec.md  market_making_specification.md
docs/cursor/: PHASE_2.2_COMPLETE.md  PHASE_2.2_HANDOFF.md  PHASE_2.3_HANDOFF.md  PHASE_2.3_SUMMARY.md  PHASE_2.4_COMPLETE.md  PHASE_2.4_HANDOFF.md  PHASE_3.1_COMPLETE.md  PHASE_3.3_COMPLETE.md  PHASE_3.4_COMPLETE.md  PHASE_3.7_HANDOFF.md  STATUS.md
docs/references/: GuideToPrecompilesArticle.md  LimitOrderBook.md  MMingVaultArticle.md  hotstuff.md  hyperliquid_docs.md
evm/: Cargo.toml
evm/src/: bridge.rs  checkpoint.rs  executor.rs  integration.rs  integration_tests.rs  lib.rs  mempool.rs  state_machine.rs  storage.rs  types.rs
evm/src/precompiles/: mod.rs  orderbook.rs  perp.rs  spot.rs  tests.rs
evm/tests/: checkpoint_tests.rs  integration_tests.rs
testutil/: Cargo.toml
testutil/src/: fixtures.rs  generators.rs  lib.rs
