[workspace]
members = [
    "consensus",
    "core",
    "evm",
    "testutil",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenLiquid Contributors"]
license = "MIT"
repository = "https://github.com/openliquid/openliquid"

[workspace.dependencies]
# Cryptography
blst = "0.3"  # BLS signatures
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
libp2p = { version = "0.53", features = ["gossipsub", "tcp", "noise", "yamux", "identify", "tokio", "macros"] }

# Storage
rocksdb = "0.21"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

