[package]
name = "consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
testutil = { path = "../testutil" }

# Cryptography
blst = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Networking
libp2p = { workspace = true }

# Storage
rocksdb = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"

